@@ -60,6 +60,13 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs = [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+        '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED'
+    ]
     testLogging {
         events "passed", "skipped", "failed"
         showStandardStreams = true
